--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 		body,html {padding: 0; margin: 0}
 		header h1 { text-align:center;
 		font-family: arial, helvetica;
-		font-size: 30px;
+		font-size: 40px;
 		}
-		header {background-color: #878787;
+		header {background-color: #676767;
 		color: #fff; padding: 20px 40px; width: 100%; box-sizing: border-box;}
 		
-		nav { background-color: #AD3DCB; padding: 15px 0;}
+		nav { background-color: #FF80FF; padding: 15px 0;}
 		nav a {color: #fff; font-size: 19px; text-decoration: none;}
 		
 		nav ul {list-style-type:none; }
-		nav ul li {display: inline-block}
+		nav ul li {display: inline-block; padding: 20px}
 	
 	</style>
 </head>
@@ -26,14 +26,14 @@
 	</header>
 	<nav>
 	<ul>
-	<li><a href="#">Home</a></li>
-	<li><a href="#">Our Team</a></li>
-	<li><a href="#">Projects</a></li>
-	<li><a href="#">Contact</a></li>
+	<li><a href="#">HOME</a></li>
+	<li><a href="#">OUR TEAM</a></li>
+	<li><a href="#">PROJECTS</a></li>
+	<li><a href="#">CONTACT</a></li>
 	<li>
 	<form>
 	<input type='text' name='search'>
-	<input type = 'submit' value = "Search">
+	<input type = 'submit' value = "Go!">
 	</form>
 	</li>
 	</ul>
