--- a/index.html
+++ b/index.html
@@ -38,5 +38,25 @@
 	</li>
 	</ul>
 	</nav>
+	<article>
+		<h2>Article heading</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis egestas. Neque laoreet suspendisse interdum consectetur libero id faucibus nisl.</p>
+		<h3>subsection</h3>
+		<p>Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Felis eget nunc lobortis mattis aliquam.</p>
+		<p>In iaculis nunc sed augue lacus viverra vitae. Feugiat in ante metus dictum. Fermentum dui faucibus in ornare quam viverra.</p>
+		<h3>Another subsection</h3>
+		<p>Sit amet justo donec enim diam. Elementum facilisis leo vel fringilla. Sodales neque sodales ut etiam sit amet. Hendrerit gravida rutrum quisque non tellus orci.</p>
+		<p>Arcu risus quis varius quam quisque id diam vel quam. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum sociis.</p>
+	</article>
+	<sidebar>
+		<h2>Related</h2>
+		<ul>
+			<li><a href="#">Oh I do like to be beside the seaside</a></li>
+			<li><a href="#">Oh I do like to be beside the sea</a></li>
+			<li><a href="#">Although in the North of England</a></li>
+			<li><a href="#">It never stops raining</a></li>
+			<li><a href="#">Oh well...</a></li>
+		</ul>
+	</sidebar>
 </body>
 </html>
