--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		font-family: arial, helvetica;
 		font-size: 40px;
 		}
-		header {background-color: #474747;
+		header {background-color: #939393;
 		color: #fff; padding: 20px 40px; width: 100%; box-sizing: border-box;}
 		
 		nav { background-color: #FF80FF; padding: 15px 0;}
@@ -17,6 +17,9 @@
 		
 		nav ul {list-style-type:none; }
 		nav ul li {display: inline-block; padding: 20px}
+		
+		sidebar {background-color: #FF80FF; padding: 15px 0; margin: 10px;}
+		article {padding: 15px 0; margin: 10px;}
 	
 	</style>
 </head>
@@ -39,7 +42,7 @@
 	</ul>
 	</nav>
 	<article>
-		<h2>Article heading</h2>
+		<center><h2>Article heading</h2></center>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis egestas. Neque laoreet suspendisse interdum consectetur libero id faucibus nisl.</p>
 		<h3>subsection</h3>
 		<p>Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Felis eget nunc lobortis mattis aliquam.</p>
@@ -49,7 +52,7 @@
 		<p>Arcu risus quis varius quam quisque id diam vel quam. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum sociis.</p>
 	</article>
 	<sidebar>
-		<h2>Related</h2>
+		<center><h2>Related</h2></center>
 		<ul>
 			<li><a href="#">Oh I do like to be beside the seaside</a></li>
 			<li><a href="#">Oh I do like to be beside the sea</a></li>
