--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		nav ul {list-style-type:none; }
 		nav ul li {display: inline-block; padding: 20px}
 		
-		sidebar {background-color: #FF80FF; padding: 15px 0; margin: 10px;}
+		aside {background-color: #FF80FF; padding: 15px 0; margin: 10px;}
 		article {padding: 15px 0; margin: 10px;}
 	
 	</style>
@@ -51,7 +51,7 @@
 		<p>Sit amet justo donec enim diam. Elementum facilisis leo vel fringilla. Sodales neque sodales ut etiam sit amet. Hendrerit gravida rutrum quisque non tellus orci.</p>
 		<p>Arcu risus quis varius quam quisque id diam vel quam. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum sociis.</p>
 	</article>
-	<sidebar>
+	<aside>
 		<center><h2>Related</h2></center>
 		<ul>
 			<li><a href="#">Oh I do like to be beside the seaside</a></li>
@@ -60,6 +60,6 @@
 			<li><a href="#">It never stops raining</a></li>
 			<li><a href="#">Oh well...</a></li>
 		</ul>
-	</sidebar>
+	</aside>
 </body>
 </html>
