--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 	</nav>
 	<article>
 		<center><h2>Article heading</h2></center>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis egestas. Neque laoreet suspendisse interdum consectetur libero id faucibus nisl.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet mauris commodo quis imperdiet. Consectetur libero id faucibus nisl tincidunt eget. Dui faucibus in ornare quam viverra orci sagittis eu volutpat. Vestibulum morbi blandit cursus risus at ultrices mi tempus imperdiet. Blandit cursus risus at ultrices mi tempus imperdiet nulla malesuada. Justo donec enim diam vulputate ut pharetra sit amet aliquam. Lectus arcu bibendum at varius vel pharetra.</p>
 		<h3>subsection</h3>
-		<p>Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Felis eget nunc lobortis mattis aliquam.</p>
-		<p>In iaculis nunc sed augue lacus viverra vitae. Feugiat in ante metus dictum. Fermentum dui faucibus in ornare quam viverra.</p>
+		<p></p>
+		<p></p>
 		<h3>Another subsection</h3>
-		<p>Sit amet justo donec enim diam. Elementum facilisis leo vel fringilla. Sodales neque sodales ut etiam sit amet. Hendrerit gravida rutrum quisque non tellus orci.</p>
-		<p>Arcu risus quis varius quam quisque id diam vel quam. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum sociis.</p>
+		<p></p>
+		<p></p>
 	</article>
 	<aside>
 		<center><h2>Related</h2></center>
