--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 	</nav>
 	<article>
 		<center><h2>Article heading</h2></center>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet mauris commodo quis imperdiet. Consectetur libero id faucibus nisl tincidunt eget. Dui faucibus in ornare quam viverra orci sagittis eu volutpat. Vestibulum morbi blandit cursus risus at ultrices mi tempus imperdiet. Blandit cursus risus at ultrices mi tempus imperdiet nulla malesuada. Justo donec enim diam vulputate ut pharetra sit amet aliquam. Lectus arcu bibendum at varius vel pharetra.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet mauris commodo quis imperdiet. Consectetur libero id faucibus nisl tincidunt eget. Dui faucibus in ornare quam viverra orci sagittis eu volutpat. Vestibulum morbi blandit cursus risus at ultrices mi tempus imperdiet.		
 		<h3>subsection</h3>
-		<p></p>
+		<p>Blandit cursus risus at ultrices mi tempus imperdiet nulla malesuada. Justo donec enim diam vulputate ut pharetra sit amet aliquam. Lectus arcu bibendum at varius vel pharetra.</p></p>
 		<p></p>
 		<h3>Another subsection</h3>
 		<p></p>
