--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		nav ul li {display: inline-block; padding: 20px}
 		
 		aside {background-color: #FF80FF; padding: 15px 0; margin: 10px; float:right;}
-		article {padding: 15px 0; margin: 10px;}
+		article {padding: 15px 0; margin: 10px; float:left;}
 	
 	</style>
 </head>
