--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		nav ul {list-style-type:none; }
 		nav ul li {display: inline-block; padding: 20px}
 		
-		aside {background-color: #FF80FF; padding: 15px 0; margin: 10px; float:right;}
-		article {padding: 15px 0; margin: 10px; float:left;}
+		aside {display: block; background-color: #FF80FF; padding: 15px 0; margin: 10px; float:right;}
+		article {display: block; padding: 15px 0; margin: 10px; float:left;}
 	
 	</style>
 </head>
