--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		nav ul {list-style-type:none; }
 		nav ul li {display: inline-block; padding: 30px}
 		
-		aside {display: inline-block; background-color: #FF80FF; padding: 15px 0; margin: 10px; width: 25%;}
-		article {display: inline-block; padding: 15px 0; margin: 10px; width: 70%;}
+		aside {display: inline-block; background-color: #FF80FF; padding: 15px 0; margin: 10px; width: 25%; height: 70%;}
+		article {display: inline-block; padding: 15px 0; margin: 10px; width: 70%; height: 70%;}
 	
 	</style>
 </head>
