--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		font-size: 40px;
 		}
 		header {background-color: #939393;
-		color: #fff; padding: 20px 40px; width: 100%; box-sizing: border-box;}
+		color: #fff; padding: 20px 20px; width: 100%; box-sizing: border-box;}
 		
 		nav { background-color: #FF80FF; padding: 15px 0;}
 		nav a {color: #fff; font-size: 19px; text-decoration: none;}
 		
 		nav ul {list-style-type:none; }
-		nav ul li {display: inline-block; padding: 30px}
+		nav ul li {display: inline-block; margin-right: 50px;}
 		
 		aside {display: inline-block; background-color: #FF80FF; padding: 15px 0; margin: 10px; width: 25%; height: 70%;}
 		article {display: inline-block; padding: 15px 0; margin: 10px; width: 70%; height: 70%;}
