--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 		font-size: 40px;
 		}
 		header {background-color: #939393;
-		color: #fff; padding: 20px 20px; width: 100%; box-sizing: border-box;}
+		color: #fff; padding: 10px 10px; width: 100%; box-sizing: border-box;}
 		
-		nav { background-color: #FF80FF; padding: 15px 0;}
+		nav { background-color: #FF80FF; padding: 15px 0; color:#000000;}
 		nav a {color: #fff; font-size: 19px; text-decoration: none;}
 		
 		nav ul {list-style-type:none; }
-		nav ul li {display: inline-block; margin-right: 50px;}
+		nav ul li {display: inline-block; margin-right: 70px;}
 		
 		aside {display: inline-block; background-color: #FF80FF; padding: 15px 0; margin: 10px; width: 25%; height: 70%;}
 		article {display: inline-block; padding: 15px 0; margin: 10px; width: 70%; height: 70%;}
 	
 	</style>
 </head>
-<body>
+<body style="background-color:#939393;">
 	<header>
 	<h1>Header</h1>
 	</header>
