--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body style="background-color:#939393;">
 	<header>
-	<h1>Header</h1>
+	<h1 style="text-shadow: 1px 1px 2px black;">Header</h1>
 	</header>
 	<nav>
 	<ul>
