--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		nav ul {list-style-type:none; }
 		nav ul li {display: inline-block; margin-right: 70px;}
 		
-		aside {display: inline-block; background-color: #FF80FF; padding: 15px 0; margin: 10px; width: 25%; height: 70%;}
-		article {display: inline-block; padding: 15px 0; margin: 10px; width: 70%; height: 70%;}
+		aside {background-color: #FFFFFF; display: inline-block; background-color: #FF80FF; padding: 15px 0; margin: 10px; width: 25%; height: 400px;}
+		article {background-color: #FFFFFF; display: inline-block; padding: 15px 0; margin: 10px; width: 70%; height: 400px;}
 	
 	</style>
 </head>
