--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 		header {background-color: #939393;
 		color: #fff; padding: 10px 10px; width: 100%; box-sizing: border-box;}
 		
-		nav { background-color: #FF80FF; padding: 15px 0; color:#000000;}
-		nav a {color: #fff; font-size: 19px; text-decoration: none;}
+		nav { background-color: #FF80FF; padding: 15px 0;}
+		nav a {color: #000000; font-size: 19px; text-decoration: none;}
 		
 		nav ul {list-style-type:none; }
 		nav ul li {display: inline-block; margin-right: 70px;}
 		
-		aside {background-color: #FFFFFF; display: inline-block; background-color: #FF80FF; padding: 15px 0; margin: 10px; width: 25%; height: 400px;}
+		aside {bdisplay: inline-block; background-color: #FF80FF; padding: 15px 0; margin: 10px; width: 25%; height: 400px;}
 		article {background-color: #FFFFFF; display: inline-block; padding: 15px 0; margin: 10px; width: 70%; height: 400px;}
 	
 	</style>
