--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		nav ul {list-style-type:none; }
 		nav ul li {display: inline-block; margin-right: 70px;}
 		
-		aside {bdisplay: inline-block; background-color: #FF80FF; padding: 15px 0; margin: 10px; width: 25%; height: 400px;}
-		article {background-color: #FFFFFF; display: inline-block; padding: 15px 0; margin: 10px; width: 70%; height: 400px;}
+		aside {bdisplay: inline-block; background-color: #FF80FF; padding: 20px; margin: 10px; width: 25%}
+		article {background-color: #FFFFFF; display: inline-block; padding: 20px; margin: 10px; width: 70%}
 	
 	</style>
 </head>
