--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		nav a {color: #000000; font-size: 19px; text-decoration: none;}
 		
 		nav ul {list-style-type:none; }
-		nav ul li {display: inline-block; margin-right: 90px;}
+		nav ul li {display: inline-block; margin-left: 90px;}
 		
 		aside {bdisplay: inline-block; background-color: #FF80FF; padding: 20px; margin: 10px; width: 20%}
 		article {background-color: #FFFFFF; display: inline-block; padding: 20px; margin: 10px; width: 65%}
