--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		nav ul {list-style-type:none; }
 		nav ul li {display: inline-block; margin-left: 90px;}
 		
-		aside {display: inline-block; background-color: #FF80FF; padding: 20px; margin: 10px; width: 20%}
+		aside {display: inline-block; background-color: #FF80FF; padding: 20px; margin: 10px; width: 20%; position: absolute;}
 		article {background-color: #FFFFFF; display: inline-block; padding: 20px; margin: 10px; width: 65%}
 	
 	</style>
