--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<h1 style="text-shadow: 1px 1px 2px black;">Header</h1>
 	</header>
 	<nav>
-	<ul>
+	<ul><center>
 	<li><a href="#">HOME</a></li>
 	<li><a href="#">OUR TEAM</a></li>
 	<li><a href="#">PROJECTS</a></li>
@@ -39,7 +39,7 @@
 	<input type = 'submit' value = "Go!">
 	</form>
 	</li>
-	</ul>
+		</center></ul>
 	</nav>
 	<article>
 		<center><h2>Article heading</h2></center>
