--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		nav ul {list-style-type:none; }
 		nav ul li {display: inline-block; margin-left: 90px;}
 		
-		aside {line-height: 2; display: inline-block; background-color: #FF80FF; padding: 20px; margin: 10px; width: 23%; position: absolute; height: 450px;}
-		article {background-color: #FFFFFF; display: inline-block; padding: 20px; margin: 10px; width: 68%; height: 450px;}
+		aside {line-height: 2; display: inline-block; background-color: #FF80FF; padding: 20px; margin: 10px; width: 23%; position: absolute; height: auto;}
+		article {background-color: #FFFFFF; display: inline-block; padding: 20px; margin: 10px; width: 68%; height: auto;}
 	
 	</style>
 </head>
